fixes inputs overflowing on small screens

--- a/src/client/tracking/projects/available-projects.scss
+++ b/src/client/tracking/projects/available-projects.scss
@@ -67,9 +67,19 @@
       display: inline-block;
       width: auto;
     }
+  }
 
-    label {
+  .project-filter-input {
+    span {
       color: $mid-grey;
+    }
+
+    input {
+      width: 100%;
+
+      @include respond-to(tablet, desktop) {
+        width: auto;
+      }
     }
   }
 
